// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`constructs an empty board: empty board 1`] = `
"123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;

exports[`parse() constructs a board with values: parsed board with 3 rows 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │2│  │3│  ┃  │4│  │5│  │6│  ┃  │7│  │8│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│4│  │5│  │6│  ┃  │7│  │8│  │9│  ┃  │1│  │2│  │3│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│7│  │8│  │9│  ┃  │1│  │2│  │3│  ┃  │4│  │5│  │6│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃   23  1 3  12   ┃   23  1 3  12 
 56  4 6  45   ┃   56  4 6  45   ┃   56  4 6  45 
 89  7 9  78   ┃   89  7 9  78   ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃   23  1 3  12   ┃   23  1 3  12 
 56  4 6  45   ┃   56  4 6  45   ┃   56  4 6  45 
 89  7 9  78   ┃   89  7 9  78   ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃   23  1 3  12   ┃   23  1 3  12 
 56  4 6  45   ┃   56  4 6  45   ┃   56  4 6  45 
 89  7 9  78   ┃   89  7 9  78   ┃   89  7 9  78 
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃   23  1 3  12   ┃   23  1 3  12 
 56  4 6  45   ┃   56  4 6  45   ┃   56  4 6  45 
 89  7 9  78   ┃   89  7 9  78   ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃   23  1 3  12   ┃   23  1 3  12 
 56  4 6  45   ┃   56  4 6  45   ┃   56  4 6  45 
 89  7 9  78   ┃   89  7 9  78   ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃   23  1 3  12   ┃   23  1 3  12 
 56  4 6  45   ┃   56  4 6  45   ┃   56  4 6  45 
 89  7 9  78   ┃   89  7 9  78   ┃   89  7 9  78 "
`;

exports[`parse() constructs a board with values: parsed board with 9 in middle 1`] = `
"123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  78   789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  78   789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  78   789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  78   78   78   ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  ┌─┐  123  ┃  123  123  123
456  456  456  ┃  456  │9│  456  ┃  456  456  456
78   78   78   ┃  78   └─┘  78   ┃  78   78   78 
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  78   78   78   ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  78   789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  78   789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  78   789  ┃  789  789  789"
`;

exports[`parse() constructs a board with values: parsed board with one row 1`] = `
"┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  ┌─┐  ┌─┐
│1│  │2│  │3│  ┃  │4│  │5│  │6│  ┃  │7│  │8│  │9│
└─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘  ┃  └─┘  └─┘  └─┘
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃                 ┃  456  456  456
789  789  789  ┃  789  789  789  ┃               
               ┃                 ┃               
               ┃  123  123  123  ┃  123  123  123
456  456  456  ┃                 ┃  456  456  456
789  789  789  ┃  789  789  789  ┃               
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 
               ┃                 ┃               
 23  1 3  12   ┃  123  123  123  ┃  123  123  123
456  456  456  ┃   56  4 6  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃   89  7 9  78 "
`;

exports[`parse() constructs a board with values: parsed board with top 3 rows of easy board in middle 1`] = `
"1 3  123  123  ┃  12   123  123  ┃  12   123  123
45    56  456  ┃  456  456   56  ┃  4 6  456  456
789  78   789  ┃  78    89  789  ┃  789  7    789
               ┃                 ┃               
1 3  123  123  ┃  12   123  123  ┃  12   123  123
45    56  456  ┃  456  456   56  ┃  4 6  456  456
789  78   789  ┃  78    89  789  ┃  789  7    789
               ┃                 ┃               
1 3  123  123  ┃  12   123  123  ┃  12   123  123
45    56  456  ┃  456  456   56  ┃  4 6  456  456
789  78   789  ┃  78    89  789  ┃  789  7    789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
1    ┌─┐  1    ┃  ┌─┐  12   12   ┃  ┌─┐  ┌─┐  12 
 5   │4│   5   ┃  │9│   56   56  ┃  │3│  │8│    6
7    └─┘  7    ┃  └─┘            ┃  └─┘  └─┘  7  
               ┃                 ┃               
┌─┐  1 3  1 3  ┃  12   12   12   ┃  12   ┌─┐  12 
│6│   5    5   ┃   5    5    5   ┃  4    │9│  4  
└─┘  78   78   ┃   8    8    8   ┃  7    └─┘  7  
               ┃                 ┃               
┌─┐  ┌─┐  1    ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  1    1  
│2│  │9│       ┃  │3│  │7│  │4│  ┃  │5│    6    6
└─┘  └─┘   8   ┃  └─┘  └─┘  └─┘  ┃  └─┘          
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
1 3  123  123  ┃  12   123  123  ┃  12   123  123
45    56  456  ┃  456  456   56  ┃  4 6  456  456
789  78   789  ┃  78    89  789  ┃  789  7    789
               ┃                 ┃               
1 3  123  123  ┃  12   123  123  ┃  12   123  123
45    56  456  ┃  456  456   56  ┃  4 6  456  456
789  78   789  ┃  78    89  789  ┃  789  7    789
               ┃                 ┃               
1 3  123  123  ┃  12   123  123  ┃  12   123  123
45    56  456  ┃  456  456   56  ┃  4 6  456  456
789  78   789  ┃  78    89  789  ┃  789  7    789"
`;

exports[`parse() constructs a board with values: parsed easy board 1`] = `
"1    ┌─┐       ┃  ┌─┐  1    12   ┃  ┌─┐  ┌─┐   2 
 5   │4│   5   ┃  │9│   56   5   ┃  │3│  │8│    6
7    └─┘       ┃  └─┘            ┃  └─┘  └─┘  7  
               ┃                 ┃               
┌─┐    3    3  ┃  1    1    12   ┃  1    ┌─┐   2 
│6│   5    5   ┃        5    5   ┃  4    │9│     
└─┘  7     8   ┃   8    8    8   ┃  7    └─┘  7  
               ┃                 ┃               
┌─┐  ┌─┐       ┃  ┌─┐  ┌─┐  ┌─┐  ┃  ┌─┐  1       
│2│  │9│       ┃  │3│  │7│  │4│  ┃  │5│    6    6
└─┘  └─┘   8   ┃  └─┘  └─┘  └─┘  ┃  └─┘          
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
     ┌─┐  ┌─┐  ┃       ┌─┐  ┌─┐  ┃       ┌─┐  ┌─┐
 5   │1│  │7│  ┃  4    │9│  │6│  ┃       │2│  │3│
     └─┘  └─┘  ┃   8   └─┘  └─┘  ┃   8   └─┘  └─┘
               ┃                 ┃               
  3    3    3  ┃  ┌─┐  1    1 3  ┃  1    ┌─┐  ┌─┐
       6    6  ┃  │2│            ┃       │5│  │4│
  9         9  ┃  └─┘   8    8   ┃  78   └─┘  └─┘
               ┃                 ┃               
┌─┐   23  ┌─┐  ┃  ┌─┐  1    1 3  ┃  1    1       
│8│   56  │4│  ┃  │7│   5    5   ┃         6    6
└─┘       └─┘  ┃  └─┘            ┃              9
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
          ┌─┐  ┃  ┌─┐  ┌─┐  1    ┃  ┌─┐       ┌─┐
       6  │2│  ┃  │5│  │3│       ┃  │9│  4    │8│
7    7    └─┘  ┃  └─┘  └─┘       ┃  └─┘       └─┘
               ┃                 ┃               
┌─┐    3    3  ┃       ┌─┐  ┌─┐  ┃  ┌─┐    3  ┌─┐
│4│   5    5   ┃       │2│  │7│  ┃  │6│       │1│
└─┘         9  ┃   8   └─┘  └─┘  ┃  └─┘       └─┘
               ┃                 ┃               
  3  ┌─┐  ┌─┐  ┃                 ┃  ┌─┐  ┌─┐     
 5   │8│  │1│  ┃  4 6  4 6       ┃  │2│  │7│   5 
  9  └─┘  └─┘  ┃              9  ┃  └─┘  └─┘     "
`;

exports[`sets values properly: board with [0, 0] = 1, [1, 2] = 6 1`] = `
"┌─┐   23   23  ┃   23   23   23  ┃   23   23   23
│1│  45   45   ┃  456  456  456  ┃  456  456  456
└─┘  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23   23  ┌─┐  ┃  123  123  123  ┃  123  123  123
45   45   │6│  ┃  45   45   45   ┃  45   45   45 
789  789  └─┘  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23   23   23  ┃  123  123  123  ┃  123  123  123
45   45   45   ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;

exports[`sets values properly: board with [0, 0] = 1, [1, 2] = 6, [4, 2] = 7 1`] = `
"┌─┐   23   23  ┃   23   23   23  ┃   23   23   23
│1│  45   45   ┃  456  456  456  ┃  456  456  456
└─┘  789   89  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23   23  ┌─┐  ┃  123  123  123  ┃  123  123  123
45   45   │6│  ┃  45   45   45   ┃  45   45   45 
789  789  └─┘  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23   23   23  ┃  123  123  123  ┃  123  123  123
45   45   45   ┃  456  456  456  ┃  456  456  456
789  789   89  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
 89   89   89  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  ┌─┐  ┃  123  123  123  ┃  123  123  123
456  456  │7│  ┃  456  456  456  ┃  456  456  456
 89   89  └─┘  ┃   89   89   89  ┃   89   89   89
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
 89   89   89  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789   89  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789   89  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  45   ┃  456  456  456  ┃  456  456  456
789  789   89  ┃  789  789  789  ┃  789  789  789"
`;

exports[`sets values properly: board with [0, 0] set to 1 1`] = `
"┌─┐   23   23  ┃   23   23   23  ┃   23   23   23
│1│  456  456  ┃  456  456  456  ┃  456  456  456
└─┘  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23   23   23  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23   23   23  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
 23  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  456  ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;

exports[`sets values properly: board with [5, 6] set to 6 1`] = `
"123  123  123  ┃  123  123  ┌─┐  ┃  123  123  123
45   45   45   ┃  45   45   │6│  ┃  45   45   45 
789  789  789  ┃  789  789  └─┘  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  45   45   45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  45   45   45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789
               ┃                 ┃               
123  123  123  ┃  123  123  123  ┃  123  123  123
456  456  456  ┃  456  456  45   ┃  456  456  456
789  789  789  ┃  789  789  789  ┃  789  789  789"
`;
